avoid horizontal overflow

--- a/11-prosjekt/style.css
+++ b/11-prosjekt/style.css
@@ -55,6 +55,7 @@ hr {
   place-items: center;
   gap: 1rem;
   padding: 1rem;
+  box-sizing: border-box;
 }
 
 .text-display {
